Update: Correção card SoloLeveling + description mobile fix

--- a/resources/mobile.css
+++ b/resources/mobile.css
@@ -84,6 +84,38 @@
         max-height: 200px;
     }
 
+    #series-description,
+    .effect-layer,
+    .description-thumb {
+        max-height: 200px;
+        min-height: auto;
+    }
+
+    .description-thumb::before {
+        top: 0; left: 0;
+        width: 100%;  
+        height: 100%;
+        background: linear-gradient(360deg,rgb(21, 24, 34) 0%, rgba(27, 29, 34, 0) 70%);
+    }
+
+    .description-content {
+        padding: 130px 20px 20px 20px;
+    }
+
+    .description-content h2 {
+        margin: 0 0 2px;
+        font-size: 1em;
+    }
+
+    .favorite-button-s2 {
+        top: -50px;
+        left: 380px;
+    }
+
+    .description-content p {
+       display: none;
+    }
+
     .content {
         opacity: 0;
     }
